200807_19:54_범석 > 키워드에 따른 상품 출력

--- a/landocProject/src/main/webapp/resources/css/style.css
+++ b/landocProject/src/main/webapp/resources/css/style.css
@@ -1951,7 +1951,6 @@ h5 > a {
 	width: 100%;
 }
 #suggestProduct{
-	/* display:block; */
 	display: none;
 	width: 70%;
 	position: absolute;
@@ -1962,6 +1961,15 @@ h5 > a {
 .productList{
 	position: relative;
 	height: 70px;
+}
+#listEmpty{
+	position: relative;
+	height: 70px;
+	font-weight: 555;
+	color: #000000;
+	display:table-cell;
+	vertical-align: middle;
+	text-align: center;
 }
 .prodImg > img{
 	position: relative;
