200813(Tur)_13:42_범석 > 리뷰사진 불러오기 및 ajax처리 완료

--- a/landocProject/src/main/webapp/resources/css/style.css
+++ b/landocProject/src/main/webapp/resources/css/style.css
@@ -2016,6 +2016,17 @@ h5 > a {
 .pwdShow{
 	display: block;
 }
+.reviewPhoto > img{
+	width: 100px;
+	height: 100px;
+}
+td, td *{
+	font-family: 'Noto Sans KR', sans-serif;
+	font-weight: bold;
+}
+.submitDate{
+	text-align: center;
+}
 /* cart.html */
 #allProduct{
 	width: 20px;
