--- a/landocProject/src/main/webapp/resources/css/style.css
+++ b/landocProject/src/main/webapp/resources/css/style.css
@@ -2021,8 +2021,8 @@ h5 > a {
 	height: 100px;
 }
 td, td *{
-	font-family: 'Noto Sans KR', sans-serif;
-	font-weight: bold;
+	font-family: "campton", "Apple SD Gothic Neo", NanumBarunGothic, "나눔바른고딕", Malgun Gothic, "맑은 고딕", dotum, sans-serif;
+	font-weight: 550;
 }
 .submitDate{
 	text-align: center;
